# INTIA

./: .editorConfig  .env.example  .gitignore  README.md  manage.py  pyproject.toml
insia_insurance/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  urls.py
users/management/commands/: create_dg.py
users/migrations/: 0001_initial.py  0002_customer.py  0003_remove_customer_firstname_remove_customer_lastname.py  0004_customer_address_customer_email_customer_phone.py
users/serializers/: branch.py  customer.py  user.py
users/views/: branch.py  customer.py  user.py
